Fixed height billboards to prevent mobile bg image jumping

--- a/css/main.css
+++ b/css/main.css
@@ -367,8 +367,7 @@ body {
 .billboard {
   display: table;
   width: 100%;
-  height: 600px;
-  max-height: 70%;
+  height: 300px;
   text-align: center;
   color: #fff;
   text-shadow: black 2px 2px 10px;
@@ -401,6 +400,9 @@ body {
 }
 
 @media(min-width:767px) {
+  .billboard {
+    height: 400px;
+  }
   .billboard-header {
       height: 300px;
   }
